# monotonic_alignment_search

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  REUSE.toml  pyproject.toml
.github/actions/setup-uv/: action.yml
.github/scripts/: add_uv_constraints.py
.github/workflows/: lint.yml  pypi-release.yml  test.yml
src/monotonic_alignment_search/: __init__.py  path.py
